[tool.poetry]
name = "dh-users"
version = "0.1.0"
description = ""
authors = ["JohnSoi <un.perso@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"

[tool.poetry.group.dh.dependencies]
dh-platform = {git = "https://github.com/JohnSoi/dh-platform.git"}
dh-access = {git = "https://github.com/JohnSoi/dh-access.git"}
dh-contacts = {git = "https://github.com/JohnSoi/dh-contacts.git"}

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pyright = "^1.1.401"
pylint = "^3.3.7"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-copybutton = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
